--- a/app/globals.css
+++ b/app/globals.css
@@ -40,7 +40,7 @@
 }
 
 .hero__title {
-  @apply 2xl:text-[72px] sm:text-[64px] text-[50px] font-extrabold;
+  @apply 2xl:text-[72px] sm:text-[64px] text-[50px] font-extrabold leading-tight;
 }
 
 .hero__subtitle {
